fixed on mobile view the theme mode buttons

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -287,3 +287,15 @@
     width: 300px;
     margin: 0px;
 }
+
+
+@media (max-width: 800px) {
+    .theme-selector-dark-mode {
+        flex-direction: column;
+    }
+
+    .theme-selector {
+        flex-direction: column;
+    }
+}
+
